// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputFieldWrapper> should render correctly as fixed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
/>
`;

exports[`<InputFieldWrapper> should render correctly as focused 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #0376DA;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
/>
`;

exports[`<InputFieldWrapper> should render correctly as read only 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0 0 0 -1px;
  padding: 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
/>
`;

exports[`<InputFieldWrapper> should render correctly with error state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #E12D2D;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
/>
`;

exports[`<InputFieldWrapper> should render correctly with prefix 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 0;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0 0 0 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
/>
`;

exports[`<InputFieldWrapper> should render correctly with suffix 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 0 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0 0 0 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
/>
`;
